// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Prompts snapshots > should render Prompts 1`] = `
<DocumentFragment>
  <div
    class="Prompts Prompts--bottom"
  />
  <div
    class="Prompts"
  />
  <div
    class="Prompts"
  />
  <div
    class="Prompts"
  />
</DocumentFragment>
`;

exports[`Prompts snapshots > should render with another variant 1`] = `
<DocumentFragment>
  <div
    class="Prompts"
  />
  <div
    class="Prompts"
  />
  <div
    class="Prompts"
  />
  <div
    class="Prompts"
  />
</DocumentFragment>
`;
